# wincap

./: .editorconfig  .gitignore  CMakeLists.txt  Cargo.toml  README.md  binding.gyp  index.d.ts  index.js  lib.d.ts  lib.js  package-lock.json  package.json  tsconfig.json
.github/workflows/: ci.yml  publish.yml
crates/wincap-core/: Cargo.toml
crates/wincap-core/src/: audio_format.rs  clock.rs  d3d_device.rs  error.rs  frame_pool.rs  lib.rs  mf_encoder.rs  mmcss.rs  spsc_ring.rs  video_processor.rs  wasapi_loopback.rs  wgc_source.rs
crates/wincap-napi/: Cargo.toml
crates/wincap-napi/src/: audio_session.rs  capture_session.rs  lib.rs  sources.rs
scripts/: prebuild.js
src/core/audio/: format.cc  format.h  iaudio_source.h  wasapi_loopback.cc  wasapi_loopback.h
src/core/capture/: icapture_source.h  wgc_source.cc  wgc_source.h
src/core/common/: clock.cc  clock.h  errors.cc  errors.h  frame_pool.cc  frame_pool.h  mmcss.cc  mmcss.h  spsc_ring.h
src/core/encoder/: iencoder.h  mf_encoder.cc  mf_encoder.h
src/core/gfx/: d3d_device.cc  d3d_device.h  video_processor.cc  video_processor.h
src/napi/: addon.cc  audio_session.cc  audio_session.h  capture_session.cc  capture_session.h  sources.cc  sources.h  tsfn.cc  tsfn.h  wincap.manifest
src/ts/: index.ts  types.ts
