[workspace]
members = ["crates/wincap-core", "crates/wincap-napi"]
resolver = "2"

[workspace.package]
version = "0.3.1"
edition = "2021"
license = "AGPL-3.0-or-later"

[workspace.dependencies]
windows = { version = "0.62", features = [
    # Core / COM
    "Win32_Foundation",
    "Win32_System_Com",
    "Win32_System_Com_StructuredStorage",
    "Win32_System_Ole",
    "Win32_System_Threading",
    "Win32_System_WinRT",
    "Win32_System_WinRT_Direct3D11",
    "Win32_System_WinRT_Graphics_Capture",
    "Win32_System_LibraryLoader",
    "Win32_System_SystemInformation",
    "Win32_Security",
    "Win32_System_Performance",
    "Win32_System_Variant",
    # D3D11 / DXGI
    "Win32_Graphics_Direct3D",
    "Win32_Graphics_Direct3D10",
    "Win32_Graphics_Direct3D11",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Dxgi_Common",
    # Media Foundation
    "Win32_Media_MediaFoundation",
    "Win32_Media_Audio",
    "Win32_Media_KernelStreaming",
    "Win32_Media_Multimedia",
    "Win32_Devices_Display",
    # UI / Display / DWM
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_Gdi",
    "Win32_Graphics_Dwm",
    "Win32_UI_HiDpi",
    "Win32_UI_Shell",
    # WinRT Graphics Capture
    "Graphics_Capture",
    "Graphics_DirectX",
    "Graphics_DirectX_Direct3D11",
    "Foundation",
]}
windows-core = "0.62"
thiserror = "2"
parking_lot = "0.12"
crossbeam-utils = "0.8"
