[workspace]
members = ["crates/wincap-core", "crates/wincap-napi"]
resolver = "2"

[workspace.package]
version = "0.4.0"
edition = "2021"
license = "AGPL-3.0-or-later"

[workspace.dependencies]
windows = { version = "0.62", features = [
    # Core / COM
    "Win32_Foundation",
    "Win32_System_Com",
    "Win32_System_Com_StructuredStorage",
    "Win32_System_Threading",
    "Win32_System_LibraryLoader",
    "Win32_System_Performance",      # QPC clock for audio timestamps
    "Win32_System_Variant",
    "Win32_System_Ole",               # PROPVARIANT helpers
    "Win32_Security",
    # WASAPI audio
    "Win32_Media_Audio",
    "Win32_Media_KernelStreaming",
    "Win32_Media_Multimedia",
    # Process / window enumeration (for process-loopback audio targeting)
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_ProcessStatus",
    "Win32_System_Diagnostics_ToolHelp",
]}
windows-core = "0.62"
thiserror = "2"
parking_lot = "0.12"
crossbeam-utils = "0.8"
